# iridium-gui

./: .gitmodules  CMakeLists.txt  CryptoNoteWallet.cmake  MunkeiVersionFromGit.cmake  README.md
iridium/: CMakeLists.txt  README.md
iridium/src/: CMakeLists.txt  CryptoNoteConfig.h  version.cmake  version.h.in
iridium/src/CryptoNoteCore/: Blockchain.cpp
iridium/src/P2p/: P2pNetworks.h
src/: CommandLineParser.cpp  Settings.cpp  main.cpp  resources.qrc
src/gui/: AboutDialog.cpp  MainWindow.cpp  MainWindow.mm
src/gui/ui/: aboutdialog.ui  addressbookframe.ui  changepassworddialog.ui  mainwindow.ui  newpassworddialog.ui  passworddialog.ui  sendframe.ui  transactionsframe.ui
src/images/: iridium.icns
